<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AccelerometerPlay</string>
    <string name="sub">Sub Activity</string>
    <string name="activity1">Running</string>
    <string name="activity2">Squat</string>
    <string name="activity3">Swing</string>
    <string name="confirm">トレーニングする</string>
    <string name="touch_screen">TOUCH SCREEN</string>
    <string name="settings">Setting</string>
    <string name="set_return">OK!!</string>
    <string name="give_up">ぽっちゃリーマン</string>
    <string name="dash_count">0</string>

    <string name="a_talk1">  運動しないし,お酒飲んでばっかりで\n
                             体重が気になるよ〜</string>
    <string name="b_talk1">  ハローマッスル!! \n
                            君の段腹はいったい何個に割れてんだい??</string>
    <string name="a_talk2">  き,君は!?!?</string>
    <string name="b_talk2">  僕の名前は向向 鳴造(むきむき なるぞう)!!\n 僕と一緒にトレーニングをしよう!!</string>
    <string name="a_talk3">  トレーニングって言われると気乗りしないなあ</string>
    <string name="b_talk3">  そのまま何もせずぽっちゃリーマンになるか,\n
                            僕のようにムキムキスーパーボディになるか\n
                            覚悟を決めるんだ!!</string>
    <string name="a_talk_select">僕は･････</string>
    <string name="b_talk_after_select1"> よーーーし!! いい返事だ!!\n
                                        まずはこのモンスターを倒してみよう!!!\n
                                        武器はもちろん,己の筋肉だ!!!</string>
    <string name="b_talk_after_select2"> ......(僕は突然目の前が真っ暗になった!!)</string>
    <string name="end_talk"> お疲れ様!!!\nトレーニング後は30分以内にタンパク質だ!!!</string>
</resources>
