<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccelerometerPlayActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/battlebg013b"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="0dp"
                    tools:ignore="MissingConstraints">

                    <Button
                        android:id="@+id/button_sub1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0.9"
                        android:orientation="horizontal"

                        android:text="@string/confirm"
                        android:textSize="30sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button
                        android:id="@+id/button_sub2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:alpha="0.9"
                        android:orientation="horizontal"
                        android:text="@string/give_up"
                        android:textSize="30sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:id="@+id/onayamiman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@drawable/onayami"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="@string/a_talk_select"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="33sp"
                    android:paddingTop="44dp"
                    android:paddingBottom="50dp"
                    android:background="#CC00004f"
                    android:alpha="0.9"
                    android:layout_gravity="bottom" />
            </FrameLayout>

        </LinearLayout>

    </FrameLayout>
</android.support.constraint.ConstraintLayout>